--- a/src/bonus/index.njk
+++ b/src/bonus/index.njk
@@ -25,7 +25,7 @@ title: Irish Weather Facts
     <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <img src="/images/hot-weather.jpg" alt="Hot Weather">
+          <img src="images/hot-weather.jpg" alt="Hot Weather">
         </figure>
       </div>
       <div class="card-content has-text-centered">
@@ -38,7 +38,7 @@ title: Irish Weather Facts
     <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <img src="/images/cold-weather.jpg" alt="Cold Weather">
+          <img src="images/cold-weather.jpg" alt="Cold Weather">
         </figure>
       </div>
       <div class="card-content has-text-centered">
@@ -52,7 +52,7 @@ title: Irish Weather Facts
     <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <img src="/images/wet-weather.jpg" alt="Wet Weather">
+          <img src="images/wet-weather.jpg" alt="Wet Weather">
         </figure>
       </div>
       <div class="card-content has-text-centered">
