--- a/src/cities/belfast/index.njk
+++ b/src/cities/belfast/index.njk
@@ -8,7 +8,7 @@ title: Belfast Weather
 <h1 class="title">{{ city.name }} Weather</h1>
 <p class="subtitle">Today’s conditions and 7‑day forecast</p>
 
-{% set banner = "/images/" + city.slug + ".png" %}
+{% set banner = "images/" + city.slug + ".png" %}
 
 <section class="box" style="padding:0; position:relative; overflow:hidden;">
 
