--- a/src/cities/galway/index.njk
+++ b/src/cities/galway/index.njk
@@ -9,7 +9,7 @@ title: Galway Weather
 <p class="subtitle">Today’s conditions and 7‑day forecast</p>
 
 {# Optional: derive banner automatically from slug #}
-{% set banner = "/images/" + city.slug + ".png" %}
+{% set banner = "images/" + city.slug + ".png" %}
 
 <section class="box" style="padding:0; position:relative; overflow:hidden;">
 
