--- a/src/_includes/components/weather-icon.njk
+++ b/src/_includes/components/weather-icon.njk
@@ -1,11 +1,11 @@
 {% set icons = {
-  "cloudy": "/images/icon-cloudy.png",
-  "lightrain": "/images/icon-lightrain.png",
-  "showers": "/images/icon-showers.png",
-  "sunnyspells": "/images/icon-sunnyspells.png",
-  "windy": "/images/icon-windy.png",
-  "overcast": "/images/icon-overcast.png",
-  "clear": "/images/icon-clear.png"
+  "cloudy": "/aimsir-weather-site/images/icon-cloudy.png",
+  "lightrain": "/aimsir-weather-site/images/icon-lightrain.png",
+  "showers": "/aimsir-weather-site/images/icon-showers.png",
+  "sunnyspells": "/aimsir-weather-site/images/icon-sunnyspells.png",
+  "windy": "/aimsir-weather-site/images/icon-windy.png",
+  "overcast": "/aimsir-weather-site/images/icon-overcast.png",
+  "clear": "/aimsir-weather-site/images/icon-clear.png"
 } %}
 
 {% set key = weather | lower | replace(" ", "") %}
