--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -1,15 +1,15 @@
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item has-text-weight-bold" href="/">
+    <a class="navbar-item has-text-weight-bold" href="">
       Ireland Weather
     </a>
   </div>
 
   <div class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="/">Dashboard</a>
-      <a class="navbar-item" href="/preferences/">Preferences</a>
-      <a class="navbar-item" href="/irish-weather/">Irish Weather</a>
+      <a class="navbar-item" href="">Dashboard</a>
+      <a class="navbar-item" href="preferences/">Preferences</a>
+      <a class="navbar-item" href="irish-weather/">Irish Weather</a>
     </div>
   </div>
 </nav>
