--- a/src/_includes/components/weather-icon.njk
+++ b/src/_includes/components/weather-icon.njk
@@ -1,17 +1,15 @@
 {% set icons = {
-  "cloudy": "/aimsir-weather-site/images/icon-cloudy.png",
-  "lightrain": "/aimsir-weather-site/images/icon-lightrain.png",
-  "showers": "/aimsir-weather-site/images/icon-showers.png",
-  "sunnyspells": "/aimsir-weather-site/images/icon-sunnyspells.png",
-  "windy": "/aimsir-weather-site/images/icon-windy.png",
-  "overcast": "/aimsir-weather-site/images/icon-overcast.png",
-  "clear": "/aimsir-weather-site/images/icon-clear.png"
+  "cloudy": "images/icon-cloudy.png",
+  "lightrain": "images/icon-lightrain.png",
+  "showers": "images/icon-showers.png",
+  "sunnyspells": "images/icon-sunnyspells.png",
+  "windy": "images/icon-windy.png",
+  "overcast": "images/icon-overcast.png",
+  "clear": "images/icon-clear.png"
 } %}
 
 {% set key = weather | lower | replace(" ", "") %}
-
-{# FIXED fallback path #}
-{% set iconPath = icons[key] or "/aimsir-weather-site/images/icon-default.png" %}
+{% set iconPath = icons[key] or "images/icon-default.png" %}
 
 <img 
   src="{{ iconPath }}" 
@@ -19,4 +17,4 @@
   class="weather-icon"
 >
 
-
+<!-- modular component. to create dynamic icons that are chosen based on JSON data -->
