--- a/src/bonus/index.njk
+++ b/src/bonus/index.njk
@@ -19,13 +19,13 @@ title: Irish Weather Facts
 <h2 class="title is-4" style="margin-top:2rem;">Check out some ideas for every weathers in each city:</h2>
 
 <div class="columns">
-
+<!-- Cards that would be used to show links to suggested activities -->
  <!-- Hot Weather -->
   <div class="column">
     <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <img src="images/hot-weather.jpg" alt="Hot Weather">
+          <img src="images/hot-weather.jpg" alt="Hot Weather Image">
         </figure>
       </div>
       <div class="card-content has-text-centered">
@@ -38,7 +38,7 @@ title: Irish Weather Facts
     <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <img src="images/cold-weather.jpg" alt="Cold Weather">
+          <img src="images/cold-weather.jpg" alt="Cold Weather Image">
         </figure>
       </div>
       <div class="card-content has-text-centered">
@@ -52,7 +52,7 @@ title: Irish Weather Facts
     <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <img src="images/wet-weather.jpg" alt="Wet Weather">
+          <img src="images/wet-weather.jpg" alt="Wet Weather Image">
         </figure>
       </div>
       <div class="card-content has-text-centered">
@@ -65,6 +65,7 @@ title: Irish Weather Facts
 
 <h2 class="title is-4" style="margin-top:2rem;">Why not explore the table of Irish weather records here:</h2>
 
+<!-- Included to show use of table -->
 <table class="table is-striped is-fullwidth is-hoverable">
   <thead>
     <tr>
