--- a/src/cities/belfast/index.njk
+++ b/src/cities/belfast/index.njk
@@ -8,7 +8,7 @@ title: Belfast Weather
 <h1 class="title">{{ city.name }} Weather</h1>
 <p class="subtitle">Today’s conditions and 7‑day forecast</p>
 
-{% set banner = "/aimsir-weather-site/images/" + city.slug + ".png" %}
+{% set banner = "/images/" + city.slug + ".png" %}
 
 <section class="box" style="padding:0; position:relative; overflow:hidden;">
 
@@ -16,7 +16,7 @@ title: Belfast Weather
     <img src="{{ banner }}" alt="{{ city.name }} banner">
   </figure>
 
-  <!-- OVERLAY CONTENT -->
+  <!-- overlay text on to image -->
   <div class="weather-overlay">
     <h2 class="title is-4" style="color:white; margin-bottom:0.25rem;">Today</h2>
     <p><strong>Weather:</strong> {{ city.today.weather }}</p>
