--- a/src/cities/cork/index.njk
+++ b/src/cities/cork/index.njk
@@ -9,7 +9,7 @@ title: Cork Weather
 <p class="subtitle">Today’s conditions and 7‑day forecast</p>
 
 {# Optional: derive banner automatically from slug #}
-{% set banner = "/aimsir-weather-site/images/" + city.slug + ".png" %}
+{% set banner = "/images/" + city.slug + ".png" %}
 
 <section class="box" style="padding:0; position:relative; overflow:hidden;">
 
@@ -17,7 +17,7 @@ title: Cork Weather
     <img src="{{ banner }}" alt="{{ city.name }} banner">
   </figure>
 
-  <!-- OVERLAY CONTENT -->
+  <!-- overlay text on to image -->
   <div class="weather-overlay">
 
     <h2 class="title is-4" style="color:white; margin-bottom:0.25rem;">Today</h2>
