--- a/src/index.njk
+++ b/src/index.njk
@@ -33,7 +33,7 @@ title: Dashboard
   <p><b>Select a city below to view a more detailed forecast.</b></p>
 
 </div>
-
+<!-- Individual city cards are being called here from citycards -->
 <div class="columns is-multiline">
   {% for city in cities %}
     {% include "components/citycard.njk" %}
