--- a/src/preferences/preferences.njk
+++ b/src/preferences/preferences.njk
@@ -8,7 +8,7 @@ title: Preferences
 
 <div class="columns">
 
-  <!-- WEATHER SETTINGS -->
+  <!-- Options for Weather SEettings -->
   <div class="column">
     <section class="box" style="background-color:#32D3A6;">
       <h2 class="title is-5" style="margin-bottom:0.5rem;">Weather Settings</h2>
@@ -61,7 +61,7 @@ title: Preferences
     </section>
   </div>
 
-  <!-- PERSONAL SETTINGS -->
+  <!-- Options for Personal Seettings/ preferences -->
   <div class="column">
     <section class="box" style="background-color:#FFB27F;">
       <h2 class="title is-5" style="margin-bottom:0.5rem;">Personal Settings</h2>
